--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest
+      - run: pytest
 
       - name: Run Flask application
         run: |
